# Janjic_kurs_6

./: README.md  groups.json  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: mailing_scheduler.py  settings.py  urls.py
service/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
service/migrations/: 0001_initial.py  0002_alter_mailing_start_time.py  0002_logs_email.py  0003_alter_mailing_clients_alter_mailing_start_time.py  0003_mailing_finish_time_mailing_start_time_and_more.py  0004_alter_mailing_start_time.py  0004_remove_mailing_time.py  0005_alter_mailing_finish_time_alter_mailing_start_time.py  0005_mailing_is_active_alter_mailing_clients.py  0006_alter_mailing_is_active.py  0006_client_user_mailing_user.py  0007_alter_mailing_is_active.py  0007_alter_mailing_status.py  0008_alter_client_email.py  0008_alter_mailing_start_time.py  0009_alter_mailing_start_time.py  0009_mailing_clients.py  0010_alter_mailing_start_time.py  0010_alter_mailing_status.py  0011_alter_mailing_start_time.py  0011_alter_mailing_status.py  0012_alter_mailing_start_time.py  0013_alter_mailing_start_time.py  0014_alter_mailing_start_time.py  0015_alter_mailing_start_time.py  0016_alter_mailing_start_time.py  0017_alter_mailing_start_time.py  0018_alter_mailing_start_time.py  0019_alter_mailing_start_time.py  0020_alter_mailing_start_time.py  0021_alter_mailing_start_time.py  0022_alter_mailing_start_time.py  (+17 more)
users/: forms.py  models.py  services.py  token.py  urls.py  views.py
(+31 files in other folders)
