[tool.poetry]
name = "janjic-kurs-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "janjic_kurs_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
ipython = "^8.15.0"
django-apscheduler = "^0.6.2"
pytils = "^0.4.1"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
pyramid-mailer = "^0.15.1"
django-scheduler = "^0.10.1"
tokens = "^0.0.3"
accounts = "^0.2.4"
django-allauth = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
